translating home, analytics, social, content

--- a/src/locales/en-US/translation.json
+++ b/src/locales/en-US/translation.json
@@ -1,136 +1,148 @@
 {
-  "Holiday Hours": "THIS IS A TEST",
-  "emailUsername": "email / username",
+  "email / username": "email / username",
   "password": "password",
-  "signIn": "Sign in",
-  "welcome": "Welcome to Yext",
-  "excitedMessage": "We're excited to have you here. Please note that the mobile version of the platform offers limited functionality compared to the desktop version.",
-  "editBusinessInfo": "Edit your business information such as address, hours, and description.",
-  "viewRecentReviews": "View your recent reviews, filter, and respond.",
-  "viewCreateSocialPosts": "View and create social posts for Google, Facebook, and Instagram.",
-  "viewTopMetrics": "View top metrics such as impressions and average rating for your business.",
-  "home": "Home",
-  "content": "Content",
-  "entities": "Entities",
-  "locations": "Locations",
-  "entityID": "Entity ID",
-  "address": "Address",
-  "hours": "Hours",
-  "open": "Open",
-  "closed": "Closed",
-  "businessLogo": "Business Logo",
-  "photoGallery": "Photo Gallery",
-  "description": "Description",
-  "save": "Save",
-  "cancel": "Cancel",
-  "add": "Add",
-  "addPhotos": "Add Photos",
-  "monday": "Monday",
-  "tuesday": "Tuesday",
-  "wednesday": "Wednesday",
-  "thursday": "Thursday",
-  "friday": "Friday",
-  "saturday": "Saturday",
-  "sunday": "Sunday",
-  "edit": "Edit",
-  "date": "Date",
-  "pickDate": "Pick a date",
-  "from": "From",
-  "to": "To",
-  "addInterval": "Add Interval",
-  "invalidTimeInterval": "Invalid Time Interval",
-  "startTimeBeforeEndTime": "Start time cannot be before the end time",
-  "dayClosedNoOpenIntervals": "If a day is closed, it cannot have any open intervals",
-  "overlappingIntervalsNotAllowed": "Overlapping intervals are not allowed",
-  "valueIsRequired": "[value] is required",
-  "valueMaxLengthExceeded": "[value] must be less than [value] characters",
-  "addMedia": "Add Media",
-  "addPhoto": "Add Photo",
-  "howToAddPhoto": "How would you like to add a photo?",
-  "addFromURL": "Add from URL",
-  "uploadFile": "Upload a File",
-  "reviews": "Reviews",
-  "respond": "Respond",
-  "allPublishers": "All Publishers",
-  "response": "Response",
-  "review": "Review",
-  "tryAgain": "Try Again",
-  "uhOhSomethingWentWrong": "Uh oh! Something went wrong.",
-  "problemWithRequest": "There was a problem with your request",
-  "commentSubmitted": "Comment Submitted!",
-  "commentSubmittedForReview": "Comment successfully submitted for review",
-  "viewReview": "View Review",
-  "show": "Show",
-  "returnHome": "Return Home",
-  "noReviewsSubmittedForEntity": "No reviews submitted for entity [value]",
+  "Sign in": "Sign in",
+  "Welcome to Yext": "Welcome to Yext",
+  "We're excited to have you here. Please note that the mobile version of the platform offers limited functionality compared to the desktop version.": "We're excited to have you here. Please note that the mobile version of the platform offers limited functionality compared to the desktop version.",
+  "Edit your business information such as address, hours, and description.": "Edit your business information such as address, hours, and description.",
+  "View your recent reviews, filter, and respond.": "View your recent reviews, filter, and respond.",
+  "View and create social posts for Google and Facebook.": "View and create social posts for Google and Facebook.",
+  "View top metrics such as impressions and average rating for your business.": "View top metrics such as impressions and average rating for your business.",
+  "Company Name": "Company Name",
+  "Home": "Home",
+  "Content": "Content",
+  "Social": "Social",
+  "Entities": "Entities",
+  "Locations": "Locations",
+  "Entity ID": "Entity ID",
+  "ID": "ID",
+  "Type": "Type",
+  "Name": "Name",
+  "Address": "Address",
+  "Hours": "Hours",
+  "Holiday Hours": "Holiday Hours",
+  "Open": "Open",
+  "Closed": "Closed",
+  "Business Logo": "Business Logo",
+  "Photo Gallery": "Photo Gallery",
+  "Description": "Description",
+  "Save": "Save",
+  "Cancel": "Cancel",
+  "Add": "Add",
+  "Add Photos": "Add Photos",
+  "Monday": "Monday",
+  "Tuesday": "Tuesday",
+  "Wednesday": "Wednesday",
+  "Thursday": "Thursday",
+  "Friday": "Friday",
+  "Saturday": "Saturday",
+  "Sunday": "Sunday",
+  "Mon": "Monday",
+  "Tue": "Tuesday",
+  "Wed": "Wednesday",
+  "Thu": "Thursday",
+  "Fri": "Friday",
+  "Sat": "Saturday",
+  "Sun": "Sunday",
+  "Edit": "Edit",
+  "Date": "Date",
+  "Pick a date": "Pick a date",
+  "From": "From",
+  "To": "To",
+  "Add Interval": "Add Interval",
+  "Invalid Time Interval": "Invalid Time Interval",
+  "Start time cannot be before the end time": "Start time cannot be before the end time",
+  "If a day is closed, it cannot have any open intervals": "If a day is closed, it cannot have any open intervals",
+  "Overlapping intervals are not allowed": "Overlapping intervals are not allowed",
+  "is required": "is required",
+  "must be less than": "must be less than",
+  "must be at least": "must be at least",
+  "characters": "characters",
+  "Add Media": "Add Media",
+  "Add Photo": "Add Photo",
+  "How would you like to add a photo?": "How would you like to add a photo?",
+  "Add from URL": "Add from URL",
+  "Upload a File": "Upload a File",
+  "Reviews": "Reviews",
+  "Respond": "Respond",
+  "All Publishers": "All Publishers",
+  "Response": "Response",
+  "Review": "Review",
+  "Try Again": "Try Again",
+  "Uh oh! Something went wrong.": "Uh oh! Something went wrong.",
+  "There was a problem with your request": "There was a problem with your request",
+  "Comment Submitted!": "Comment Submitted!",
+  "Comment successfully submitted for review": "Comment successfully submitted for review",
+  "View Review": "View Review",
+  "Show": "Show",
+  "Return Home": "Return Home",
+  "No reviews submitted for entity [value]": "No reviews submitted for entity [value]",
   "of": "of",
-  "socialPost": "Social Post",
-  "createPost": "Create post",
-  "continue": "Continue",
-  "back": "Back",
-  "selectPublisher": "Select Publisher",
-  "selectEntities": "Select Entities",
-  "addPostContent": "Add Post Content",
-  "addMediaContent": "Add Media",
-  "publish": "Publish",
-  "schedule": "Schedule",
-  "step": "Step",
-  "ofStep": "of",
-  "cancelAction": "Cancel",
-  "selectPublisherAction": "Select a publisher",
-  "postContent": "Post Content",
-  "contentType": "Content",
-  "test": "Test",
-  "image": "Image",
-  "charactersRemaining": "Characters remaining",
-  "addGoogleCallToAction": "Add Google Call To Action",
-  "onlyAppliesToGoogle": "Only applies to Google. Skip this step for Facebook posts.",
-  "callToActionType": "Call To Action Type",
-  "url": "URL",
-  "selectCallToActionType": "Select Call To Action Type",
-  "continueWithoutCallToAction": "Continue Without Call To Action",
-  "addCallToAction": "Add Call To Action",
-  "enterURL": "Enter URL",
-  "book": "Book",
-  "buy": "Buy",
-  "learnMore": "Learn More",
-  "signUp": "Sign Up",
-  "order": "Order",
-  "call": "Call",
-  "enterPhoneNumber": "Enter Phone Number",
-  "additionalOptions": "Additional Options",
-  "publishPost": "Publish Post",
-  "postImmediately": "Post Immediately",
-  "schedulePost": "Schedule Post",
-  "scheduleSettings": "Schedule Settings",
-  "postDate": "Date",
-  "postTime": "Time",
-  "pickPostDate": "Pick a date",
-  "socialPosts": "Social Posts",
-  "chooseFile": "Choose file",
-  "noFileChosen": "No file chosen",
-  "addPhotoMedia": "Add Photo",
-  "addFromURLMedia": "Add from URL",
-  "uploadFileMedia": "Upload a File",
-  "howToAddPhotoMedia": "How would you like to add a photo?",
-  "success": "Success!",
-  "postSuccessfullySubmitted": "Post successfully submitted.",
-  "uhOhSomethingWentWrongMedia": "Uh oh! Something went wrong.",
-  "problemWithRequestMedia": "There was a problem with your request.",
-  "requiredField": "Required",
-  "enterPostContent": "Enter Post Content",
-  "invalidURL": "Invalid URL",
-  "typeIsRequired": "Type is required",
-  "maxLengthExceeded": "Maximum length exceeded",
-  "urlIsRequired": "URL is required",
-  "invalidPhoneNumber": "Invalid Phone Number",
-  "selectPublishingSchedule": "Select a publishing schedule",
-  "postDateIsRequired": "Post date is required",
-  "postTimeIsRequired": "Post time is required",
-  "analytics": "Analytics",
-  "dashboard": "Dashboard",
-  "pageViews": "Page Views",
-  "impressions": "Impressions",
-  "averageRating": "Average Rating",
-  "totalReviews": "Total Reviews"
+  "Social Post": "Social Post",
+  "Create post": "Create post",
+  "Continue": "Continue",
+  "Back": "Back",
+  "Select Publisher": "Select Publisher",
+  "Select Entities": "Select Entities",
+  "Publish": "Publish",
+  "Schedule": "Schedule",
+  "Step": "Step",
+  "Select a publisher": "Select a publisher",
+  "Text": "Text",
+  "Add Text": "Add Text",
+  "Test": "Test",
+  "Image": "Image",
+  "Characters remaining": "Characters remaining",
+  "Add Google Call To Action": "Add Google Call To Action",
+  "Only applies to Google. Skip this step for Facebook posts.": "Only applies to Google. Skip this step for Facebook posts.",
+  "Call To Action Type": "Call To Action Type",
+  "URL": "URL",
+  "Select Call To Action Type": "Select Call To Action Type",
+  "Continue Without Call To Action": "Continue Without Call To Action",
+  "Add Call To Action": "Add Call To Action",
+  "Enter URL": "Enter URL",
+  "Book (as in booking a reservation, not the thing you read)": "Book (as in booking a reservation, not the thing you read)",
+  "Buy": "Buy",
+  "Learn More": "Learn More",
+  "Sign Up": "Sign Up",
+  "Order": "Order",
+  "Call": "Call",
+  "Enter Phone Number": "Enter Phone Number",
+  "Additional Options": "Additional Options",
+  "Publish Post": "Publish Post",
+  "Post Immediately": "Post Immediately",
+  "Schedule Post": "Schedule Post",
+  "Schedule Settings": "Schedule Settings",
+  "Time": "Time",
+  "Social Posts": "Social Posts",
+  "Choose file": "Choose file",
+  "No file chosen": "No file chosen",
+  "Success!": "Success!",
+  "Post successfully submitted.": "Post successfully submitted.",
+  "There was a problem with your request.": "There was a problem with your request",
+  "Required": "Required",
+  "Enter Post Content": "Enter Post Content",
+  "Post Content": "Post Content",
+  "Invalid url": "Invalid url",
+  "Type is required": "Type is required",
+  "Maximum length exceeded": "Maximum length exceeded",
+  "URL is required": "URL is required",
+  "Invalid Phone Number": "Invalid Phone Number",
+  "Select a publishing schedule": "Select a publishing schedule",
+  "Post date is required": "Post date is required",
+  "Post time is required": "Post time is required",
+  "Analytics": "Analytics",
+  "Dashboard": "Dashboard",
+  "Page Views": "Page Views",
+  "Impressions": "Impressions",
+  "Average Rating": "Average Rating",
+  "Total Reviews": "Total Reviews",
+  "Failed to Edit Entity": "Failed to Edit Entity",
+  "Failed to upload image": "Failed to upload image",
+  "Please choose a different image": "Please choose a different image",
+  "Entity Updated": "Entity Updated",
+  "Successfully updated entity": "Successfully updated entity",
+  "Search": "Search",
+  "Last 7 Days": "Last 7 Days",
+  "Last 30 Days": "Last 30 Days"
 }
