--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -1,136 +1,148 @@
 {
-  "emailUsername": "email / nom d'utilisateur",
+  "email / username": "email / nom d'utilisateur",
   "password": "mot de passe",
-  "signIn": "se connecter",
-  "welcome": "Bienvenue",
-  "excitedMessage": "Nous sommes ravis de vous avoir sur la plateforme Yext. Veuillez noter que la version mobile offre des fonctionnalités limitées par rapport à la version de bureau.",
-  "editBusinessInfo": "Modifiez les informations de votre entreprise telles que l'adresse, les heures et la description.",
-  "viewRecentReviews": "Affichez, filtrez et répondez à vos avis récents.",
-  "viewCreateSocialPosts": "Affichez et créez des publications sur les réseaux sociaux comme Google, Facebook et Instagram.",
-  "viewTopMetrics": "Affichez les principales mesures telles que le nombre d'impressions et la note moyenne de votre entreprise.",
-  "home": "Accueil",
-  "content": "Content",
-  "entities": "Entités",
-  "locations": "Établissement",
-  "entityID": "ID de l'entité",
-  "address": "Adresse",
-  "hours": "Horaires",
-  "holidayHours": "Horaires (horaires de jours fériés)",
-  "open": "Ouvert",
-  "closed": "Fermé",
-  "businessLogo": "Logo de l'entreprise",
-  "photoGallery": "Galerie photo",
-  "description": "Description",
-  "save": "Sauvegarder",
-  "cancel": "Annuler",
-  "add": "Ajouter",
-  "addPhotos": "Ajouter des photos",
-  "monday": "Lundi",
-  "tuesday": "Mardi",
-  "wednesday": "Mercredi",
-  "thursday": "Jeudi",
-  "friday": "Vendredi",
-  "saturday": "Samedi",
-  "sunday": "Dimanche",
-  "edit": "Modifier",
-  "date": "Date",
-  "pickDate": "Choisir une date",
-  "from": "de",
-  "to": "à",
-  "addInterval": "ajouter un intervalle",
-  "invalidTimeInterval": "Intervalle de temps non valide",
-  "startTimeBeforeEndTime": "L'heure de début ne peut pas être antérieure à l'heure de fin",
-  "dayClosedNoOpenIntervals": "Si un jour est fermé, il ne peut pas avoir d'intervalles ouverts",
-  "overlappingIntervalsNotAllowed": "les intervalles qui se chevauchent ne sont pas autorisés",
-  "valueIsRequired": "[valeur] est obligatoire",
-  "valueMaxLengthExceeded": "[valeur] doit être inférieur à [valeur] caractères",
-  "addMedia": "Ajouter un média",
-  "addPhoto": "Ajouter une photo",
-  "howToAddPhoto": "Comment voulez vous ajouter une photo ?",
-  "addFromURL": "Ajouter à partir de l'URL",
-  "uploadFile": "Télécharger un fichier",
-  "reviews": "Reviews",
-  "respond": "Répondre",
-  "allPublishers": "Tous les sites",
-  "response": "Réponse",
-  "review": "Avis",
-  "tryAgain": "Réessayer",
-  "uhOhSomethingWentWrong": "Oh, oh ! Quelque chose n'a pas fonctionné.",
-  "problemWithRequest": "Il y a eu un problème avec votre demande",
-  "commentSubmitted": "Commentaire soumis !",
-  "commentSubmittedForReview": "Commentaire soumis, en attente d'approbation",
-  "viewReview": "Voir l'avis",
-  "show": "Montrer",
-  "returnHome": "Retourner à l'accueil",
-  "noReviewsSubmittedForEntity": "Aucun avis n'a été soumis pour l'entité [value]",
+  "Sign in": "se connecter",
+  "Welcome to Yext": "Bienvenue",
+  "We're excited to have you here. Please note that the mobile version of the platform offers limited functionality compared to the desktop version.": "Nous sommes ravis de vous avoir sur la plateforme Yext. Veuillez noter que la version mobile offre des fonctionnalités limitées par rapport à la version de bureau.",
+  "Edit your business information such as address, hours, and description.": "Modifiez les informations de votre entreprise telles que l'adresse, les heures et la description.",
+  "View your recent reviews, filter, and respond.": "Affichez, filtrez et répondez à vos avis récents.",
+  "View and create social posts for Google and Facebook.": "Affichez et créez des publications sur les réseaux sociaux comme Google et Facebook.",
+  "View top metrics such as impressions and average rating for your business.": "Affichez les principales mesures telles que le nombre d'impressions et la note moyenne de votre entreprise.",
+  "Company Name": "Nom d'entreprise",
+  "Home": "Accueil",
+  "Content": "Content",
+  "Social": "Social",
+  "Entities": "Entités",
+  "Locations": "Établissement",
+  "Entity ID": "ID de l'entité",
+  "ID": "ID",
+  "Type": "Type",
+  "Name": "Nom",
+  "Address": "Adresse",
+  "Hours": "Horaires",
+  "Holiday Hours": "Horaires (horaires de jours fériés)",
+  "Open": "Ouvert",
+  "Closed": "Fermé",
+  "Business Logo": "Logo de l'entreprise",
+  "Photo Gallery": "Galerie photo",
+  "Description": "Description",
+  "Save": "Sauvegarder",
+  "Cancel": "Annuler",
+  "Add": "Ajouter",
+  "Add Photos": "Ajouter des photos",
+  "Monday": "Lundi",
+  "Tuesday": "Mardi",
+  "Wednesday": "Mercredi",
+  "Thursday": "Jeudi",
+  "Friday": "Vendredi",
+  "Saturday": "Samedi",
+  "Sunday": "Dimanche",
+  "Mon": "Lun",
+  "Tue": "Mar",
+  "Wed": "Mer",
+  "Thu": "Jeu",
+  "Fri": "Ven",
+  "Sat": "Sam",
+  "Sun": "Dim",
+  "Edit": "Modifier",
+  "Date": "Date",
+  "Pick a date": "Choisir une date",
+  "From": "de",
+  "To": "à",
+  "Add Interval": "ajouter un intervalle",
+  "Invalid Time Interval": "Intervalle de temps non valide",
+  "Start time cannot be before the end time": "L'heure de début ne peut pas être antérieure à l'heure de fin",
+  "If a day is closed, it cannot have any open intervals": "Si un jour est fermé, il ne peut pas avoir d'intervalles ouverts",
+  "Overlapping intervals are not allowed": "les intervalles qui se chevauchent ne sont pas autorisés",
+  "is required": "est obligatoire",
+  "must be less than": "doit être inférieur à",
+  "must be at least": "doit comporter au moins",
+  "characters": "caractères",
+  "Add Media": "Ajouter un média",
+  "Add Photo": "Ajouter une photo",
+  "How would you like to add a photo?": "Comment voulez vous ajouter une photo ?",
+  "Add from URL": "Ajouter à partir de l'URL",
+  "Upload a File": "Télécharger un fichier",
+  "Reviews": "Reviews",
+  "Respond": "Répondre",
+  "All Publishers": "Tous les sites",
+  "Response": "Réponse",
+  "Review": "Avis",
+  "Try Again": "Réessayer",
+  "Uh oh! Something went wrong.": "Oh, oh ! Quelque chose n'a pas fonctionné.",
+  "There was a problem with your request": "Il y a eu un problème avec votre demande",
+  "Comment Submitted!": "Commentaire soumis !",
+  "Comment successfully submitted for review": "Commentaire soumis, en attente d'approbation",
+  "View Review": "Voir l'avis",
+  "Show": "Montrer",
+  "Return Home": "Retourner à l'accueil",
+  "No reviews submitted for entity [value]": "`Aucun avis n'a été soumis pour l'entité [valeur]",
   "of": "de",
-  "socialPost": "Publication",
-  "createPost": "Ajouter un message",
-  "continue": "continuer",
-  "back": "retour",
-  "selectPublisher": "Sélectionner un réseau social",
-  "selectEntities": "Sélectionner des entités",
-  "addPostContent": "Ajouter du texte",
-  "addMediaContent": "Ajouter un média",
-  "publish": "Publier",
-  "schedule": "Programmer un message",
-  "step": "Étape",
-  "ofStep": "sur",
-  "cancelAction": "Annuler",
-  "selectPublisherAction": "Sélectionner un réseau social",
-  "postContent": "Publier le contenu",
-  "contentType": "Contenu",
-  "test": "Tester",
-  "image": "Image",
-  "charactersRemaining": "Caractères restants",
-  "addGoogleCallToAction": "Ajouter une action Google",
-  "onlyAppliesToGoogle": "S'applique uniquement à Google. Sautez cette étape pour les posts Facebook.",
-  "callToActionType": "Type d'appel à l'action",
-  "url": "URL",
-  "selectCallToActionType": "Sélectionner le type d'action",
-  "continueWithoutCallToAction": "Continuer sans action",
-  "addCallToAction": "Ajouter une action",
-  "enterURL": "Saisir l'URL",
-  "book": "Réserver",
-  "buy": "Acheter",
-  "learnMore": "En savoir plus",
-  "signUp": "S'inscrire",
-  "order": "Commander",
-  "call": "Appeler",
-  "enterPhoneNumber": "Entrer le numéro de téléphone",
-  "additionalOptions": "Options supplémentaires",
-  "publishPost": "Publier le message",
-  "postImmediately": "Publier immédiatement",
-  "schedulePost": "Planifier le message",
-  "scheduleSettings": "Paramètres de planification",
-  "postDate": "Date",
-  "postTime": "Heure",
-  "pickPostDate": "Choisir une date",
-  "socialPosts": "Publications sur les réseaux sociaux",
-  "chooseFile": "Choisir un fichier",
-  "noFileChosen": "Pas de fichier choisi",
-  "addPhotoMedia": "Ajouter une photo",
-  "addFromURLMedia": "Ajouter à partir d'une URL",
-  "uploadFileMedia": "Télécharger un fichier",
-  "howToAddPhotoMedia": "Comment souhaitez-vous ajouter une photo ?",
-  "success": "Succès !",
-  "postSuccessfullySubmitted": "Le message a été soumis avec succès.",
-  "uhOhSomethingWentWrongMedia": "Oh, oh ! Quelque chose n'a pas fonctionné.",
-  "problemWithRequestMedia": "Il y a eu un problème avec votre demande.",
-  "requiredField": "Obligatoire",
-  "enterPostContent": "ajouter le contenu de l'article",
-  "invalidURL": "URL invalide",
-  "typeIsRequired": "Le type est obligatoire",
-  "maxLengthExceeded": "Longueur maximale dépassée",
-  "urlIsRequired": "L'URL est obligatoire",
-  "invalidPhoneNumber": "Numéro de téléphone invalide",
-  "selectPublishingSchedule": "Sélectionner un calendrier de publication",
-  "postDateIsRequired": "La date de publication est obligatoire",
-  "postTimeIsRequired": "L'heure de publication est obligatoire",
-  "analytics": "Analytics",
-  "dashboard": "Tableau de bord",
-  "pageViews": "Nombre de pages vues",
-  "impressions": "Nombre d'impressions",
-  "averageRating": "Note moyenne",
-  "totalReviews": "avis en attente de réponse"
+  "Social Post": "Publication",
+  "Create post": "Ajouter un message",
+  "Continue": "Continuer",
+  "Back": "Retour",
+  "Select Publisher": "Sélectionner un réseau social",
+  "Select Entities": "Sélectionner des entités",
+  "Publish": "Publier",
+  "Schedule": "Programmer un message",
+  "Step": "Étape",
+  "Select a publisher": "Sélectionner un réseau social",
+  "Text": "Texte",
+  "Add Text": "Ajouter du texte",
+  "Test": "Tester",
+  "Image": "Image",
+  "Characters remaining": "Caractères restants",
+  "Add Google Call To Action": "Ajouter une action Google",
+  "Only applies to Google. Skip this step for Facebook posts.": "S'applique uniquement à Google. Sautez cette étape pour les posts Facebook.",
+  "Call To Action Type": "Type d'appel à l'action",
+  "URL": "URL",
+  "Select Call To Action Type": "Sélectionner le type d'action",
+  "Continue Without Call To Action": "Continuer sans action",
+  "Add Call To Action": "Ajouter une action",
+  "Enter URL": "Saisir l'URL",
+  "Book": "Réserver",
+  "Buy": "Acheter",
+  "Learn More": "En savoir plus",
+  "Sign Up": "S'inscrire",
+  "Order": "Commander",
+  "Call": "Appeler",
+  "Enter Phone Number": "Entrer le numéro de téléphone",
+  "Additional Options": "Options supplémentaires",
+  "Publish Post": "Publier le message",
+  "Post Immediately": "Publier immédiatement",
+  "Schedule Post": "Planifier le message",
+  "Schedule Settings": "Paramètres de planification",
+  "Time": "Heure",
+  "Social Posts": "Publications sur les réseaux sociaux",
+  "Choose file": "Choisir un fichier",
+  "No file chosen": "Pas de fichier choisi",
+  "Success!": "Succès !",
+  "Post successfully submitted.": "Le message a été soumis avec succès.",
+  "There was a problem with your request.": "Il y a eu un problème avec votre demande.",
+  "Required": "Obligatoire",
+  "Enter Post Content": "ajouter le contenu de l'article",
+  "Post Content": "Le contenu de l'article",
+  "Invalid url": "URL invalide",
+  "Type is required": "Le type est obligatoire",
+  "Maximum length exceeded": "Longueur maximale dépassée",
+  "URL is required": "L'URL est obligatoire",
+  "Invalid Phone Number": "Numéro de téléphone invalide",
+  "Select a publishing schedule": "Sélectionner un calendrier de publication",
+  "Post date is required": "La date de publication est obligatoire",
+  "Post time is required": "L'heure de publication est obligatoire",
+  "Analytics": "Analytics",
+  "Dashboard": "Tableau de bord",
+  "Page Views": "Nombre de pages vues",
+  "Impressions": "Nombre d'impressions",
+  "Average Rating": "Note moyenne",
+  "Total Reviews": "avis en attente de réponse",
+  "Failed to Edit Entity": "Échec de la modification de l'entité",
+  "Failed to upload image": "Échec du téléchargement de l'image",
+  "Please choose a different image": "Veuillez choisir une autre image",
+  "Entity Updated": "Entité mise à jour",
+  "Successfully updated entity": "Mise à jour de l'entité réussie",
+  "Search": "Chercher",
+  "Last 7 Days": "7 derniers jours",
+  "Last 30 Days": "30 derniers jours"
 }
