--- a/src/locales/en-US/translation.json
+++ b/src/locales/en-US/translation.json
@@ -37,13 +37,13 @@
   "Friday": "Friday",
   "Saturday": "Saturday",
   "Sunday": "Sunday",
-  "Mon": "Monday",
-  "Tue": "Tuesday",
-  "Wed": "Wednesday",
-  "Thu": "Thursday",
-  "Fri": "Friday",
-  "Sat": "Saturday",
-  "Sun": "Sunday",
+  "Mon": "Mon",
+  "Tue": "Tue",
+  "Wed": "Wed",
+  "Thu": "Thu",
+  "Fri": "Fri",
+  "Sat": "Sat",
+  "Sun": "Sun",
   "Edit": "Edit",
   "Date": "Date",
   "Pick a date": "Pick a date",
@@ -51,7 +51,7 @@
   "To": "To",
   "Add Interval": "Add Interval",
   "Invalid Time Interval": "Invalid Time Interval",
-  "Start time cannot be before the end time": "Start time cannot be before the end time",
+  "Start time cannot be after the end time": "Start time cannot be after the end time",
   "If a day is closed, it cannot have any open intervals": "If a day is closed, it cannot have any open intervals",
   "Overlapping intervals are not allowed": "Overlapping intervals are not allowed",
   "is required": "is required",
