--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -67,6 +67,7 @@
   "Respond": "Répondre",
   "All Publishers": "Tous les sites",
   "Response": "Réponse",
+  "RESPONSE": "RÉPONSE",
   "Review": "Avis",
   "Try Again": "Réessayer",
   "Uh oh! Something went wrong.": "Oh, oh ! Quelque chose n'a pas fonctionné.",
@@ -144,5 +145,6 @@
   "Successfully updated entity": "Mise à jour de l'entité réussie",
   "Search": "Chercher",
   "Last 7 Days": "7 derniers jours",
-  "Last 30 Days": "30 derniers jours"
+  "Last 30 Days": "30 derniers jours",
+  "intlDateTime": "{{val, datetime}}"
 }
