--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -146,5 +146,17 @@
   "Search": "Chercher",
   "Last 7 Days": "7 derniers jours",
   "Last 30 Days": "30 derniers jours",
-  "intlDateTime": "{{val, datetime}}"
+  "intlDateTime": "{{val, datetime}}",
+  "Write a response": "Rédiger une réponse",
+"Submit Response": "Soumettre la réponse",
+"Review Rating": "note de l'avis",
+"All Ratings": "Toutes les évaluations",
+"& Up": "Et au-dessus",
+"& Below": "Et en dessous",
+"Filter Reviews by Rating": "Filtrer les avis par note",
+"Filter by reviews awaiting a response": "Filtrer les avis en attente de réponse",
+"Search for review content by keyword": "Rechercher dans le contenu des avis par mot-clé",
+"Comment": "Commentaire",
+"Review or Comment": "Avis ou commentaire",
+"You must select at least one publisher": "Vous devez sélectionner au moins un éditeur"
 }
