search translation update

--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -143,20 +143,20 @@
   "Please choose a different image": "Veuillez choisir une autre image",
   "Entity Updated": "Entité mise à jour",
   "Successfully updated entity": "Mise à jour de l'entité réussie",
-  "Search": "Chercher",
+  "Search": "Rechercher",
   "Last 7 Days": "7 derniers jours",
   "Last 30 Days": "30 derniers jours",
   "intlDateTime": "{{val, datetime}}",
   "Write a response": "Rédiger une réponse",
-"Submit Response": "Soumettre la réponse",
-"Review Rating": "note de l'avis",
-"All Ratings": "Toutes les évaluations",
-"& Up": "Et au-dessus",
-"& Below": "Et en dessous",
-"Filter Reviews by Rating": "Filtrer les avis par note",
-"Filter by reviews awaiting a response": "Filtrer les avis en attente de réponse",
-"Search for review content by keyword": "Rechercher dans le contenu des avis par mot-clé",
-"Comment": "Commentaire",
-"Review or Comment": "Avis ou commentaire",
-"You must select at least one publisher": "Vous devez sélectionner au moins un éditeur"
+  "Submit Response": "Soumettre la réponse",
+  "Review Rating": "note de l'avis",
+  "All Ratings": "Toutes les évaluations",
+  "& Up": "Et au-dessus",
+  "& Below": "Et en dessous",
+  "Filter Reviews by Rating": "Filtrer les avis par note",
+  "Filter by reviews awaiting a response": "Filtrer les avis en attente de réponse",
+  "Search for review content by keyword": "Rechercher dans le contenu des avis par mot-clé",
+  "Comment": "Commentaire",
+  "Review or Comment": "Avis ou commentaire",
+  "You must select at least one publisher": "Vous devez sélectionner au moins un éditeur"
 }
