various qa items

--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -64,6 +64,8 @@
   "Add from URL": "Ajouter à partir de l'URL",
   "Upload a File": "Télécharger un fichier",
   "Reviews": "Reviews",
+  "All Reviews": "Tous les avis",
+  "Reviews with no response": "Avis sans réponse",
   "Respond": "Répondre",
   "All Publishers": "Tous les sites",
   "Response": "Réponse",
@@ -154,6 +156,7 @@
   "& Up": "Et au-dessus",
   "& Below": "Et en dessous",
   "Filter Reviews by Rating": "Filtrer les avis par note",
+  "Filter Reviews by Publisher": "Filtrer les avis par éditeur",
   "Filter by reviews awaiting a response": "Filtrer les avis en attente de réponse",
   "Search for review content by keyword": "Rechercher dans le contenu des avis par mot-clé",
   "Comment": "Commentaire",
