adding pickup and drive through hours

--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -21,6 +21,10 @@
   "Address": "Adresse",
   "Hours": "Horaires",
   "Holiday Hours": "Horaires (horaires de jours fériés)",
+  "Pickup Hours": "Heures de ramassage",
+  "Pickup Holiday Hours": "Heures de ramassage pendant les vacances",
+  "Drive-Through Hours": "Heures de service au volant",
+  "Drive-Through Holiday Hours": "Horaires du service au volant pendant les vacances",
   "Open": "Ouvert",
   "Closed": "Fermé",
   "Business Logo": "Logo de l'entreprise",
