added buttons for missing content fields

--- a/src/locales/en-US/translation.json
+++ b/src/locales/en-US/translation.json
@@ -21,6 +21,10 @@
   "Address": "Address",
   "Hours": "Hours",
   "Holiday Hours": "Holiday Hours",
+  "Pickup Hours": "Pickup Hours",
+  "Pickup Holiday Hours": "Pickup Holiday Hours",
+  "Drive-Through Hours": "Drive-Through Hours",
+  "Drive-Through Holiday Hours": "Drive-Through Holiday Hours",
   "Open": "Open",
   "Closed": "Closed",
   "Business Logo": "Business Logo",
@@ -28,6 +32,7 @@
   "Description": "Description",
   "Save": "Save",
   "Cancel": "Cancel",
+  "Clear": "Clear",
   "Add": "Add",
   "Add Photos": "Add Photos",
   "Monday": "Monday",
@@ -48,7 +53,7 @@
   "Date": "Date",
   "Pick a date": "Pick a date",
   "From": "From",
-  "To": "to",
+  "To": "To",
   "Add Interval": "Add Interval",
   "Invalid Time Interval": "Invalid Time Interval",
   "Start time cannot be after the end time": "Start time cannot be after the end time",
@@ -64,9 +69,12 @@
   "Add from URL": "Add from URL",
   "Upload a File": "Upload a File",
   "Reviews": "Reviews",
+  "All Reviews": "All Reviews",
+  "Reviews with no response": "Reviews with no response",
   "Respond": "Respond",
   "All Publishers": "All Publishers",
   "Response": "Response",
+  "RESPONSE": "RESPONSE",
   "Review": "Review",
   "Try Again": "Try Again",
   "Uh oh! Something went wrong.": "Uh oh! Something went wrong.",
@@ -101,7 +109,7 @@
   "Continue Without Call To Action": "Continue Without Call To Action",
   "Add Call To Action": "Add Call To Action",
   "Enter URL": "Enter URL",
-  "Book (as in booking a reservation, not the thing you read)": "Book (as in booking a reservation, not the thing you read)",
+  "Book": "Book",
   "Buy": "Buy",
   "Learn More": "Learn More",
   "Sign Up": "Sign Up",
@@ -119,7 +127,7 @@
   "No file chosen": "No file chosen",
   "Success!": "Success!",
   "Post successfully submitted.": "Post successfully submitted.",
-  "There was a problem with your request.": "There was a problem with your request",
+  "There was a problem with your request.": "There was a problem with your request.",
   "Required": "Required",
   "Enter Post Content": "Enter Post Content",
   "Post Content": "Post Content",
@@ -145,5 +153,24 @@
   "Search": "Search",
   "Last 7 Days": "Last 7 Days",
   "Last 30 Days": "Last 30 Days",
-  "intlDateTime": "{{val, datetime}}"
-}
+  "intlDateTime": "{{val, datetime}}",
+  "Write a response": "Write a response",
+  "Submit Response": "Submit Response",
+  "Review Rating": "Review Rating",
+  "All Ratings": "All Ratings",
+  "& Up": "& Up",
+  "& Below": "& Below",
+  "Filter Reviews by Rating": "Filter Reviews by Rating",
+  "Filter Reviews by Publisher": "Filter Reviews by Publisher",
+  "Filter by reviews awaiting a response": "Filter by reviews awaiting a response",
+  "Search for review content by keyword": "Search for review content by keyword",
+  "Comment": "Comment",
+  "Review or Comment": "Review or Comment",
+  "You must select at least one publisher": "You must select at least one publisher",
+  "daysAgo": "{{count}} days ago",
+  "Today": "Today",
+  "Yesterday": "Yesterday",
+  "addField": "+ Add {{field}}",
+  "Awaiting Response": "Awaiting Response",
+  "Publisher": "Publisher"
+  }
