--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -20,11 +20,11 @@
   "Name": "Nom",
   "Address": "Adresse",
   "Hours": "Horaires",
-  "Holiday Hours": "Horaires (horaires de jours fériés)",
-  "Pickup Hours": "Heures de ramassage",
-  "Pickup Holiday Hours": "Heures de ramassage pendant les vacances",
-  "Drive-Through Hours": "Heures de service au volant",
-  "Drive-Through Holiday Hours": "Horaires du service au volant pendant les vacances",
+  "Holiday Hours": "Des horaires exceptionnels",
+  "Pickup Hours": "Des horaires de Retrait",
+  "Pickup Holiday Hours": "Des horaires de Retrait (des horaires exceptionnels)",
+  "Drive-Through Hours": "Des horaires de Drive",
+  "Drive-Through Holiday Hours": "Des horaires de Drive (des horaires exceptionnels)",
   "Open": "Ouvert",
   "Closed": "Fermé",
   "Business Logo": "Logo de l'entreprise",
@@ -32,6 +32,7 @@
   "Description": "Description",
   "Save": "Sauvegarder",
   "Cancel": "Annuler",
+  "Clear": "Effacer",
   "Add": "Ajouter",
   "Add Photos": "Ajouter des photos",
   "Monday": "Lundi",
@@ -165,5 +166,11 @@
   "Search for review content by keyword": "Rechercher dans le contenu des avis par mot-clé",
   "Comment": "Commentaire",
   "Review or Comment": "Avis ou commentaire",
-  "You must select at least one publisher": "Vous devez sélectionner au moins un éditeur"
+  "You must select at least one publisher": "Vous devez sélectionner au moins un éditeur",
+  "daysAgo": "il y a {{count}} jours",
+  "Today": "Aujourd'hui",
+  "Yesterday": "Hier",
+  "addField": "+ Ajouter {{field}}",
+  "Awaiting Response": "En Attente de Réponse",
+  "Publisher": "Éditrice"  
 }
